force-app/main/default/objects/ServiceContractCancel__c/fields/IsDecisionAuthority__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionAuthority__c</fullName>
    <label>決裁権限の有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>