force-app/main/default/objects/ServiceContractCancel__c/fields/IsDepositAutoRegistrationExcept__c.field-meta.xml
<CustomField>
    <fullName>IsDepositAutoRegistrationExcept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>預入自動登録除外フラグ</label>
    <type>Checkbox</type>
</CustomField>