force-app/main/default/objects/ServiceContractCancel__c/fields/IsLegalCheckTarget__c.field-meta.xml
<CustomField>
    <fullName>IsLegalCheckTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リーガルチェック対象フラグ</label>
    <type>Checkbox</type>
</CustomField>