force-app/main/default/objects/ServiceContractCancel__c/fields/IsLeopalacePointUse__c.field-meta.xml
<CustomField>
    <fullName>IsLeopalacePointUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>レオパレスポイント利用有無</label>
    <type>Checkbox</type>
</CustomField>