force-app/main/default/objects/ServiceContractCancel__c/fields/IsRenewalExpiryList__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalExpiryList__c</fullName>
    <label>更新満了一覧の必要性</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>