force-app/main/default/objects/ServiceContractCancel__c/fields/IsRentRevisionDateMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsRentRevisionDateMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>家賃改定年月日必須企業フラグ</label>
    <type>Checkbox</type>
</CustomField>