force-app/main/default/objects/ServiceContractCancel__c/fields/IsRetireDueDateGrace__c.field-meta.xml
<CustomField>
    <fullName>IsRetireDueDateGrace__c</fullName>
    <label>退職期日猶予登録有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>