force-app/main/default/objects/ServiceContractCancel__c/fields/IsWitness__c.field-meta.xml
<CustomField>
    <fullName>IsWitness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>立会有無</label>
    <type>Checkbox</type>
</CustomField>