force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveDateChangeRule__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeRule__c</fullName>
    <label>退去日変更ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>