force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveDateCheckListSubmitRule__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateCheckListSubmitRule__c</fullName>
    <label>退去日チェックリスト提出ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>