force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveGuidanceContent__c.field-meta.xml
<CustomField>
    <fullName>LeaveGuidanceContent__c</fullName>
    <label>退去案内内容_社員</label>
    <type>TextArea</type>
</CustomField>