force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveGuidanceContentEmployee__c.field-meta.xml
<CustomField>
    <fullName>LeaveGuidanceContentEmployee__c</fullName>
    <label>退去案内内容_社員</label>
    <length>255</length>
    <type>Text</type>
</CustomField>