force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveGuideLeaveSelfCheckListCB__c.field-meta.xml
<CustomField>
    <fullName>LeaveGuideLeaveSelfCheckListCB__c</fullName>
    <label>退去案内書_退去時セルフチェックリストCB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>