force-app/main/default/objects/ServiceContractCancel__c/fields/LeavePersonNegotiationRule__c.field-meta.xml
<CustomField>
    <fullName>LeavePersonNegotiationRule__c</fullName>
    <label>退去本人交渉ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>