force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveResonOwnHhouse__c.field-meta.xml
<CustomField>
    <fullName>LeaveResonOwnHhouse__c</fullName>
    <label>退去理由持家購入</label>
    <length>255</length>
    <type>Text</type>
</CustomField>