force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveResonRetire__c.field-meta.xml
<CustomField>
    <fullName>LeaveResonRetire__c</fullName>
    <label>退去理由退職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>