force-app/main/default/objects/ServiceContractCancel__c/fields/LeaveWitnessNecessity__c.field-meta.xml
<CustomField>
    <fullName>LeaveWitnessNecessity__c</fullName>
    <label>退去立会いの必要性</label>
    <length>255</length>
    <type>Text</type>
</CustomField>