force-app/main/default/objects/ServiceContractCancel__c/fields/lesseeFrame__c.field-meta.xml
<CustomField>
    <fullName>lesseeFrame__c</fullName>
    <label>賃借人枠</label>
    <length>255</length>
    <type>Text</type>
</CustomField>