force-app/main/default/objects/ServiceContractCancel__c/fields/ListNotArrivedEmailNotes__c.field-meta.xml
<CustomField>
    <fullName>ListNotArrivedEmailNotes__c</fullName>
    <label>リスト未着メール注意事項</label>
    <type>TextArea</type>
</CustomField>