force-app/main/default/objects/ServiceContractCancel__c/fields/MoveOutScheduledDatePendingConfirm__c.field-meta.xml
<CustomField>
    <fullName>MoveOutScheduledDatePendingConfirm__c</fullName>
    <label>退室予定日_未定確定表示用リスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>