force-app/main/default/objects/ServiceContractCancel__c/fields/MovingProcedureComment__c.field-meta.xml
<CustomField>
    <fullName>MovingProcedureComment__c</fullName>
    <label>引越手続きコメント</label>
    <type>TextArea</type>
</CustomField>