force-app/main/default/objects/ServiceContractCancel__c/fields/MovingProcedureContact__c.field-meta.xml
<CustomField>
    <fullName>MovingProcedureContact__c</fullName>
    <label>引越手続き連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>