force-app/main/default/objects/ServiceContractCancel__c/fields/NewAntisocialCorrespondenceSpecify__c.field-meta.xml
<CustomField>
    <fullName>NewAntisocialCorrespondenceSpecify__c</fullName>
    <label>反社対応指定内容_新規</label>
    <type>TextArea</type>
</CustomField>