force-app/main/default/objects/ServiceContractCancel__c/fields/NewAntisocialPostscriptUnavailable__c.field-meta.xml
<CustomField>
    <fullName>NewAntisocialPostscriptUnavailable__c</fullName>
    <label>反社追記不可対応_新規</label>
    <type>TextArea</type>
</CustomField>