force-app/main/default/objects/ServiceContractCancel__c/fields/NewDecisionEmailRule__c.field-meta.xml
<CustomField>
    <fullName>NewDecisionEmailRule__c</fullName>
    <label>メール送信ルール_斡旋新規_決裁用</label>
    <type>TextArea</type>
</CustomField>