force-app/main/default/objects/ServiceContractCancel__c/fields/OverChangeRentBurdenDate__c.field-meta.xml
<CustomField>
    <fullName>OverChangeRentBurdenDate__c</fullName>
    <label>家賃負担日内の家賃負担日変更</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MaruBatsu</valueSetName>
    </valueSet>
</CustomField>