force-app/main/default/objects/ServiceContractCancel__c/fields/OverOralReception__c.field-meta.xml
<CustomField>
    <fullName>OverOralReception__c</fullName>
    <label>家賃負担日内の口頭での受付</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MaruBatsu</valueSetName>
    </valueSet>
</CustomField>