force-app/main/default/objects/ServiceContractCancel__c/fields/OwnerReasonsAgreementConfirmRequest__c.field-meta.xml
<CustomField>
    <fullName>OwnerReasonsAgreementConfirmRequest__c</fullName>
    <label>家主都合_合意書確認依頼</label>
    <length>255</length>
    <type>Text</type>
</CustomField>