force-app/main/default/objects/ServiceContractCancel__c/fields/OwnerReasonsDiscussionsResultReport__c.field-meta.xml
<CustomField>
    <fullName>OwnerReasonsDiscussionsResultReport__c</fullName>
    <label>家主都合_協議結果報告</label>
    <length>255</length>
    <type>Text</type>
</CustomField>