force-app/main/default/objects/ServiceContractCancel__c/fields/OwnerReasonsGaragePeriodClose__c.field-meta.xml
<CustomField>
    <fullName>OwnerReasonsGaragePeriodClose__c</fullName>
    <label>家主都合_駐車場期限間近</label>
    <length>255</length>
    <type>Text</type>
</CustomField>