force-app/main/default/objects/ServiceContractCancel__c/fields/OwnerReasonsLeaveApplicationFormRemind__c.field-meta.xml
<CustomField>
    <fullName>OwnerReasonsLeaveApplicationFormRemind__c</fullName>
    <label>家主都合_退去申請書リマインド</label>
    <length>255</length>
    <type>Text</type>
</CustomField>