force-app/main/default/objects/ServiceContractCancel__c/fields/OwnerReasonslegitimateReason__c.field-meta.xml
<CustomField>
    <fullName>OwnerReasonslegitimateReason__c</fullName>
    <label>家主都合_正当事由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>