force-app/main/default/objects/ServiceContractCancel__c/fields/OwnerReasonsOwnerReasonsOccurrence__c.field-meta.xml
<CustomField>
    <fullName>OwnerReasonsOwnerReasonsOccurrence__c</fullName>
    <label>家主都合_家主都合発生</label>
    <length>255</length>
    <type>Text</type>
</CustomField>