force-app/main/default/objects/ServiceContractCancel__c/fields/OwnerReasonsScheduledRentedHouse__c.field-meta.xml
<CustomField>
    <fullName>OwnerReasonsScheduledRentedHouse__c</fullName>
    <label>家主都合_定期借家</label>
    <length>255</length>
    <type>Text</type>
</CustomField>