force-app/main/default/objects/ServiceContractCancel__c/fields/PersonalManual__c.field-meta.xml
<CustomField>
    <fullName>PersonalManual__c</fullName>
    <label>敷返登録用個人振手マニュアル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入居者回収無し</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>