force-app/main/default/objects/ServiceContractCancel__c/fields/PersonNegotiationDecision__c.field-meta.xml
<CustomField>
    <fullName>PersonNegotiationDecision__c</fullName>
    <label>本人交渉判断</label>
    <length>255</length>
    <type>Text</type>
</CustomField>