force-app/main/default/objects/ServiceContractCancel__c/fields/PersonNegotiationManual__c.field-meta.xml
<CustomField>
    <fullName>PersonNegotiationManual__c</fullName>
    <label>本人交渉マニュアル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>