force-app/main/default/objects/ServiceContractCancel__c/fields/PleaseMatter1__c.field-meta.xml
<CustomField>
    <fullName>PleaseMatter1__c</fullName>
    <label>お願い事項1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>