force-app/main/default/objects/ServiceContractCancel__c/fields/PleaseMatter2__c.field-meta.xml
<CustomField>
    <fullName>PleaseMatter2__c</fullName>
    <label>お願い事項2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>