force-app/main/default/objects/ServiceContractCancel__c/fields/PleaseMatterComment4__c.field-meta.xml
<CustomField>
    <fullName>PleaseMatterComment4__c</fullName>
    <label>お願い事項コメント4</label>
    <type>TextArea</type>
</CustomField>