force-app/main/default/objects/ServiceContractCancel__c/fields/RenewalAntisocialPostscriptUnavailable__c.field-meta.xml
<CustomField>
    <fullName>RenewalAntisocialPostscriptUnavailable__c</fullName>
    <label>反社追記不可対応_更新</label>
    <type>TextArea</type>
</CustomField>