force-app/main/default/objects/ServiceContractCancel__c/fields/RenewalDecisionEmailRule__c.field-meta.xml
<CustomField>
    <fullName>RenewalDecisionEmailRule__c</fullName>
    <label>メール送信ルール_更新_決裁用</label>
    <type>TextArea</type>
</CustomField>