force-app/main/default/objects/ServiceContractCancel__c/fields/RenewalNegotiationRule__c.field-meta.xml
<CustomField>
    <fullName>RenewalNegotiationRule__c</fullName>
    <label>更新交渉ルール</label>
    <type>TextArea</type>
</CustomField>