force-app/main/default/objects/ServiceContractCancel__c/fields/RenewalReConclusionNotes__c.field-meta.xml
<CustomField>
    <fullName>RenewalReConclusionNotes__c</fullName>
    <label>更新再締結時注意事項</label>
    <type>TextArea</type>
</CustomField>