force-app/main/default/objects/ServiceContractCancel__c/fields/RenewalResidentContactNotes__c.field-meta.xml
<CustomField>
    <fullName>RenewalResidentContactNotes__c</fullName>
    <label>更新入居者連絡時注意事項</label>
    <type>TextArea</type>
</CustomField>