force-app/main/default/objects/ServiceContractCancel__c/fields/RenewalResidentSendNotes__c.field-meta.xml
<CustomField>
    <fullName>RenewalResidentSendNotes__c</fullName>
    <label>更新入居者送付時注意事項</label>
    <type>TextArea</type>
</CustomField>