force-app/main/default/objects/ServiceContractCancel__c/fields/RentalChargesBillingRule__c.field-meta.xml
<CustomField>
    <fullName>RentalChargesBillingRule__c</fullName>
    <label>レンタル手数料請求ルール</label>
    <type>TextArea</type>
</CustomField>