force-app/main/default/objects/ServiceContractCancel__c/fields/RetiredPersonListExceptTarget__c.field-meta.xml
<CustomField>
    <fullName>RetiredPersonListExceptTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退職者リスト個社別除外対象</label>
    <type>Checkbox</type>
</CustomField>