force-app/main/default/objects/ServiceContractCancel__c/fields/RetiredPersonListFilterTarget__c.field-meta.xml
<CustomField>
    <fullName>RetiredPersonListFilterTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退職者リスト個社別振り分け対象</label>
    <type>Checkbox</type>
</CustomField>