force-app/main/default/objects/ServiceContractCancel__c/fields/RetireDueDateGraceRegistrationIs__c.field-meta.xml
<CustomField>
    <fullName>RetireDueDateGraceRegistrationIs__c</fullName>
    <label>退職期日猶予登録有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>