force-app/main/default/objects/ServiceContractCancel__c/fields/RetirementDateGrace__c.field-meta.xml
<CustomField>
    <fullName>RetirementDateGrace__c</fullName>
    <label>退職期日猶予有無登録</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PresenceAbsence</valueSetName>
    </valueSet>
</CustomField>