force-app/main/default/objects/ServiceContractCancel__c/fields/RV7__c.field-meta.xml
<CustomField>
    <fullName>RV7__c</fullName>
    <label>RV7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>