force-app/main/default/objects/ServiceContractCancel__c/fields/RV9__c.field-meta.xml
<CustomField>
    <fullName>RV9__c</fullName>
    <label>RV9</label>
    <length>255</length>
    <type>Text</type>
</CustomField>