force-app/main/default/objects/ServiceContractCancel__c/fields/SealApplicationFormRule__c.field-meta.xml
<CustomField>
    <fullName>SealApplicationFormRule__c</fullName>
    <label>捺印申請書ルール</label>
    <type>TextArea</type>
</CustomField>