force-app/main/default/objects/ServiceContractCancel__c/fields/SelfCollectBankAccountContractorKana__c.field-meta.xml
<CustomField>
    <fullName>SelfCollectBankAccountContractorKana__c</fullName>
    <label>個人回収口座_口座名義ｶﾅ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>