force-app/main/default/objects/ServiceContractCancel__c/fields/SelfCollectFinancialInstitutionBranch__c.field-meta.xml
<CustomField>
    <fullName>SelfCollectFinancialInstitutionBranch__c</fullName>
    <label>個人回収口座_金融機関支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>