force-app/main/default/objects/ServiceContractCancel__c/fields/SelfCollectFinancialInstitutionName__c.field-meta.xml
<CustomField>
    <fullName>SelfCollectFinancialInstitutionName__c</fullName>
    <label>個人回収口座_金融機関名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>