force-app/main/default/objects/ServiceContractCancel__c/fields/SelfInfoProtectionLevelNote__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoProtectionLevelNote__c</fullName>
    <label>個人情報保護レベル備考</label>
    <type>TextArea</type>
</CustomField>