force-app/main/default/objects/ServiceContractCancel__c/fields/SelfPayContact__c.field-meta.xml
<CustomField>
    <fullName>SelfPayContact__c</fullName>
    <label>個人負担連絡</label>
    <length>255</length>
    <type>Text</type>
</CustomField>