force-app/main/default/objects/ServiceContractCancel__c/fields/SelfPayGuidance2__c.field-meta.xml
<CustomField>
    <fullName>SelfPayGuidance2__c</fullName>
    <label>個人負担案内２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>