force-app/main/default/objects/ServiceContractCancel__c/fields/SelfPayTransferBank__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTransferBank__c</fullName>
    <label>個人負担振込み銀行</label>
    <length>255</length>
    <type>Text</type>
</CustomField>