force-app/main/default/objects/ServiceContractCancel__c/fields/SelfPayTransferBankAccountNum__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTransferBankAccountNum__c</fullName>
    <label>個人負担振込み口座番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>