force-app/main/default/objects/ServiceContractCancel__c/fields/SelfPayTransferBankAccountType__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTransferBankAccountType__c</fullName>
    <label>個人負担振込み口座種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>