force-app/main/default/objects/ServiceContractCancel__c/fields/ServiceContractId__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractId__c</fullName>
    <label>サービス契約ID</label>
    <type>AutoNumber</type>
</CustomField>