force-app/main/default/objects/ServiceContractCancel__c/fields/SettlementNegotiations__c.field-meta.xml
<CustomField>
    <fullName>SettlementNegotiations__c</fullName>
    <label>精算交渉区分（本人・SNT）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>選択なし</fullName>
            </value>
            <value>
                <fullName>選択必要</fullName>
            </value>
            <value>
                <fullName>管理外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>