force-app/main/default/objects/ServiceContractCancel__c/fields/SingleKSapporoSupport__c.field-meta.xml
<CustomField>
    <fullName>SingleKSapporoSupport__c</fullName>
    <label>単K札幌対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area</valueSetName>
    </valueSet>
</CustomField>