force-app/main/default/objects/ServiceContractCancel__c/fields/SingleKUseSapporoIs__c.field-meta.xml
<CustomField>
    <fullName>SingleKUseSapporoIs__c</fullName>
    <label>単Ｋ用札幌フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>