force-app/main/default/objects/ServiceContractCancel__c/fields/SNTDecisionApplicationDocument__c.field-meta.xml
<CustomField>
    <fullName>SNTDecisionApplicationDocument__c</fullName>
    <label>SNT決裁申請書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>両方</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>