force-app/main/default/objects/ServiceContractCancel__c/fields/SNTDecisionNotes__c.field-meta.xml
<CustomField>
    <fullName>SNTDecisionNotes__c</fullName>
    <label>SNT決裁注意事項</label>
    <type>TextArea</type>
</CustomField>