force-app/main/default/objects/ServiceContractCancel__c/fields/SNTSPTStaffEmail__c.field-meta.xml
<CustomField>
    <fullName>SNTSPTStaffEmail__c</fullName>
    <label>SNT_SPT担当者メール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>