force-app/main/default/objects/ServiceContractCancel__c/fields/StaffIrregular__c.field-meta.xml
<CustomField>
    <fullName>StaffIrregular__c</fullName>
    <label>担当者イレギュラー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>