force-app/main/default/objects/ServiceContractCancel__c/fields/TransferMethodManual__c.field-meta.xml
<CustomField>
    <fullName>TransferMethodManual__c</fullName>
    <label>振手引きマニュアル</label>
    <type>TextArea</type>
</CustomField>