force-app/main/default/objects/ServiceContractCancel__c/fields/WasteDocumentReConsignmentFeasibility__c.field-meta.xml
<CustomField>
    <fullName>WasteDocumentReConsignmentFeasibility__c</fullName>
    <label>廃棄書類再委託可否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>