force-app/main/default/objects/ServiceContractCancel__c/fields/WasteDocumentReConsignmentPerson__c.field-meta.xml
<CustomField>
    <fullName>WasteDocumentReConsignmentPerson__c</fullName>
    <label>廃棄書類再委託可否者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>