force-app/main/default/objects/ServiceContractCancel__c/fields/WebApplication__c.field-meta.xml
<CustomField>
    <fullName>WebApplication__c</fullName>
    <label>WEB申請</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し（紙）</fullName>
            </value>
            <value>
                <fullName>専用WEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>